--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
     <header>
         <h1>Remembering the OG RarePepeWallet.wtf</h1>
         <nav>
-            <a href="/">SOL Contract Address: 9vAv2vFLHnCNN7BmYhLvoAq93YErjmBtHGasEBvu1cgX</a>
+            <a href="/">SOL Contract Address: COMING SOON</a>
         </nav>
     </header>
 
